[metadata]
name = ascii-chess
version = 0.0.1
author = Ryan Bachman
author_email = ryanbach@amazon.com
description = An python client to play chess 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src